homework/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: otus-hw-4-service
    name: otus-hw-4-service
spec:
    ports:
        - name: http
          port: 80
          targetPort: 80
    selector:
        app: otus-hw-4
