homework/manifests/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: otus-hw-4-dr
spec:
  host: otus-hw-4-service
  subsets:
    - name: v1
      labels:
        version: "ver1"
    - name: v2
      labels:
        version: "ver2"
